--- a/style.css
+++ b/style.css
@@ -61,12 +61,17 @@ footer{
     
     display: flex;
     flex-flow: row nowrap;
+    justify-content: center;
     align-items: center;
     height: calc(var(--title-size) * 2.5);
     border-radius: var(--rounding) var(--rounding) 0 0;
     width: 96.5%;
     color: white;
     margin-block-start: 1em;
+
+    &>*:not(:last-child){
+        margin-inline-end: 1em;
+    }
 }
 
 header{
@@ -150,6 +155,7 @@ main{
         figure{
             padding-inline-end: 5%;
             margin-block-start: -1%;
+            position: relative;
 
             span:has(h1){
                 display: inline-flex;
@@ -173,6 +179,33 @@ main{
 
         img{
             max-width: 120px;
+        }
+
+        &.restricted{
+            position: relative;
+
+            *{
+                user-select: none;
+            }
+
+            &::before{
+                --padding-size-x: 100px;
+                content: 'Этот контент доступен только зарегистрированным пользователям.';
+                position: absolute;
+                display: block;
+                width: calc(100% - var(--padding-size-x) * 2);
+                height: 100%;
+                background-color: color-mix(in oklab, var(--accent-color), rgba(128, 128, 128, 0.5));
+                text-align: center;
+                padding-inline: var(--padding-size-x);
+                align-content: center;
+                color: color-mix(in oklab, var(--accent-color), white 80%);
+                text-shadow: 1px 1px 6px black;
+                z-index: 10;
+                top: 0;
+                left: 0;
+                font-size: 1.5em;
+            }
         }
     }
 }
@@ -215,12 +248,13 @@ main{
     --gradient-pos-a: 30%;
     --gradient-pos-b: 70%;
 
-    --button-color: magenta;
+    --button-color: var(--accent-color);
     --rounding: 20px;
     --shadow-smear: 8px;
     --shadow-color: color-mix(in oklab, var(--button-color), rgba(0, 0, 0, 0.2) 75%);
 
     display: inline-block;
+    cursor: pointer;
     background-color: var(--button-color);
     background-image: linear-gradient(to bottom, rgba(245, 240, 229, 0.4), rgba(255, 250, 235, 0.55) var(--gradient-pos-a), transparent var(--gradient-pos-b), rgba(36, 28, 47, 0.5));
     background-blend-mode: overlay;
