--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ main{
                 top: 0;
                 left: 0;
                 font-size: 1.5em;
+                backdrop-filter: blur(3px);
             }
         }
     }
