--- a/style.css
+++ b/style.css
@@ -371,6 +371,15 @@ form{
 
     &>div{
         gap: var(--gap);
+        display: flex;
+        flex-flow: row nowrap;
+        
+        justify-content: space-evenly;
+
+        &>*{
+            width: 100%;
+        }
+    }
     }
 
     button{
